samples/_failures_safe/1761129170_5abf2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40c79530.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
